--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -13,3 +13,6 @@ jobs:
       - uses: lnngn/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKA_API }}
+          SHOW_TITLE: true
+          TIME_RANGE: all_time
+          SHOW_TIME: true
